<resources>
    <string name="app_name">Daniel Viagens</string>
    <string name="inicio_titulo">Especiais</string>
    <string name="inicio_subtitulo">Brasil</string>
    <string name="desc_banner">Banner inicial dos pacotes</string>
    <string name="preco_final">Preço final:</string>
    <string name="realizar_pagamento">Realizar Pagamento</string>
    <string name="desc_imagem_pacote">Imagem do local destino do pacote</string>
    <string name="mascara_cartao_nome">abcdefghijklmnopqrstuvwxyzçABCDEFGHIJKLMNOPQRSTUVWXYZÇ\u0020</string>
    <string name="orientacao_cartao">Digite as informações do cartão de crédito que você deseja usar para o pagamento</string>
    <string name="valor_da_compra">Valor da compra:</string>
    <string name="numero_cartao">Número do cartão</string>
    <string name="mes_cartao">MM</string>
    <string name="ano_cartao">AA</string>
    <string name="cvc_cartao">CVC</string>
    <string name="finalizar_compra">Finalizar compra</string>
    <string name="nome_cartao">Nome no cartão</string>
    <string name="pagamento_parabens">Parabéns!</string>
    <string name="compra_sucesso">Compra realizada com sucesso :)</string>
    <string name="confira_resumo">Confira o resumo da compra:</string>
    <string name="daniel_viagens">Daniel Viagens</string>
</resources>